Fixes Breadcrumbs alignment issues in Chrome* (version 24 or later)

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -1843,7 +1843,7 @@ html[dir="rtl"] .breadcrumb li
 
 .breadcrumb li:first-child:before
 {
-    content: "";
+    content: normal;
     margin: 0;
 }
 
